SVG now renders to fit area.

--- a/client/main.html
+++ b/client/main.html
@@ -1,9 +1,9 @@
 <head>
-  <title>An example of using D3.js in Meteor</title>
+  <title>Capstone Project</title>
 </head>
 
 <body>
-  <h1>D3 example on a Meteor App</h1>
+  <h1>Victoria Line Information Map</h1>
   {{> mapSVG}}
 </body>
 
