mapping for Victoria Line complete.

--- a/client/main.html
+++ b/client/main.html
@@ -22,9 +22,21 @@
 
 <template name="details">
   <div id="details">
-    <p>
-      Station :- {{name}}
+    <!-- <p>
+      {{name}}
     </p>
+    {{> arrivalsList}}-->
   </div>
-
 </template>
+
+<!-- <template name="arrivalsList">
+  <div name="container">
+  </div>
+</template> -->
+
+<!-- <template name="arrivalItem">
+  <div class="container">
+    <p>{{destination}}</p>
+    <hr>
+  </div>
+</template> -->
